--- a/app/templates/settings/labs.hbs
+++ b/app/templates/settings/labs.hbs
@@ -125,6 +125,15 @@
                 </div>
             </div>
             <div class="gh-setting">
+                <div class="gh-setting-content">
+                    <div class="gh-setting-title">RTL Support</div>
+                    <div class="gh-setting-desc">Set Ghost admin's layout to support right to left</div>
+                </div>
+                <div class="gh-setting-action">
+                    <div class="for-switch"><GhFeatureFlag @flag="rtlSupport" /></div>
+                </div>
+            </div>
+            <div class="gh-setting">
                 <GhUploader
                     @extensions={{this.jsonExtension}}
                     @uploadUrl="/redirects/json/"
